# bumblebee

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  GUIA_BUMBLEBEE.md  README.md
.claude/: settings.local.json
.github/workflows/: auto-release.yml  ci.yml  release.yml  test-packages.yml
cmd/bumblebee/: main.go  main_test.go  release_policy_test.go  roots.go  roots_compat.go  selftest.go  sink.go  version.go
cmd/bumblebee/selftest/: catalog.json
docs/: deployment-windows.md  inventory-sources.md
docs/schema/v0.1.0/: exposure-catalog.schema.json  package-record.schema.json
internal/ecosystem/cargo/: cargo.go  cargo_test.go
internal/ecosystem/conda/: conda.go  (+1 more)
internal/exposure/: threat_intel_test.go
internal/model/: model.go
internal/normalize/: normalize.go  normalize_test.go
internal/osv/: osv.go  osv_test.go
internal/output/: httpsink_test.go  output.go  output_test.go  terminalsink.go
internal/roots/: roots.go
internal/scanner/: rootkind_test.go  scanner.go  scanner_integration_test.go  scanner_test.go
internal/walk/: walk.go  walk_test.go
npm-package/: README.md  package.json
npm-package/scripts/: install.js
pypi-package/: README.md  pyproject.toml
pypi-package/bumblebee_scanner/: __init__.py  cli.py
scripts/: generate-report.py
threat_intel/: README.md  conda-forge-metadata-2025-03-04.json  conda-tooling-2025-06-14.json  conda-tooling-7asecurity-2025-06-14.json  glassworm-v2-vscode-2026-04.json  glassworm.json  mastra-2026-06-17.json  mini-shai-hulud-leoplatform-2026-06-24.json
tools/osvcatalog/: main.go  main_test.go
(+16 files in other folders)
