[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bumblebee-scan"
version = "0.1.3"
description = "Supply-chain inventory collector for package, extension, and developer-tool metadata on macOS and Linux."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "Perplexity AI", email = "oss@perplexity.ai" }]
keywords = ["supply-chain", "security", "sbom", "inventory", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://github.com/perplexityai/bumblebee"
Repository = "https://github.com/perplexityai/bumblebee"
Issues = "https://github.com/perplexityai/bumblebee/issues"

[project.scripts]
bumblebee = "bumblebee_scanner.cli:main"

[tool.setuptools.packages.find]
include = ["bumblebee_scanner*"]
